changement de config

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: "touwin"
 description: "Un blog ..."
 url: "http://touwin.github.io"
 permalink: pretty
-pygments: true
+pygments: false
 markdown: rdiscount
